# Copyright 2017 Sreejith Krishnan R <sreejith@ganita.io>
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
# except in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the
# License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
# either express or implied. See the License for the specific language governing permissions
# and limitations under the License.


[package]
name = "harfbuzz-sys"
version = "0.1.0"
authors = ["Sreejith Krishnan R <sreejith@ganita.io>"]
license = "Apache License 2.0"
license-file = "LICENSE.md"
build = "build.rs"

[dependencies]
libc = "0.2"
freetype-sys = { git = "https://github.com/ganita/rust-freetype-sys" }

[dev-dependencies]
clap = "*"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1"

[[example]]
name = "ot_math_constants"
path = "examples/ot_math_constants.rs"